--- a/RomeoDelta/RomeoDelta.csproj
+++ b/RomeoDelta/RomeoDelta.csproj
@@ -47,6 +47,8 @@
     <Compile Include="IWordFrequencyAnalyzer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WordFrequency.cs" />
+    <Compile Include="WordFrequencyAnalyzer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
