Refactoring; Added test for CalculateMostFrequentNWords, failed

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -43,6 +43,7 @@
     <Compile Include="IWordFrequency.cs" />
     <Compile Include="IWordFrequencyAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegExPatterns.cs" />
     <Compile Include="WordFrequency.cs" />
     <Compile Include="WordFrequencyAnalyzer.cs" />
   </ItemGroup>
