--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -40,12 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ITextParserUtility.cs" />
+    <Compile Include="ITextParser.cs" />
     <Compile Include="IWordFrequency.cs" />
     <Compile Include="IWordFrequencyAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegExPatterns.cs" />
-    <Compile Include="TextParserUtility.cs" />
+    <Compile Include="RegExPatternCollection.cs" />
+    <Compile Include="TextParser.cs" />
     <Compile Include="WordFrequency.cs" />
     <Compile Include="WordFrequencyAnalyzer.cs" />
   </ItemGroup>
